# rCore-N

./: .gitignore  LICENSE  README.md  sleep.sh
.github/workflows/: gitlab-mirror.yml
os/: .gitignore  Cargo.toml  build.rs  justfile  makefile
os/.cargo/: config.toml
os/src/: config.rs  console.rs  console_blog.rs  entry.asm  lang_items.rs  link_app.asm  linker-lrv.ld  loader.rs  logger.rs  main.rs  plic.rs  sbi.rs  timer.rs  uart.rs
os/src/fs/: mail.rs  mod.rs  pipe.rs  serial.rs  stdio.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/task/: context.rs  manager.rs  mod.rs  pid.rs  pool.rs  processor.rs  switch.asm  switch.rs  task.rs
os/src/trace/: mod.rs  trace.asm
os/src/trap/: context.rs  mod.rs  trap.asm  usertrap.rs
pac/: Cargo.toml
pac/lrv-pac/: lib.rs  lrv-16550.svd
pac/lrv-pac/src/: lib.rs  uart.rs
pac/lrv-pac/src/uart/: fcr.rs  ier.rs  iir.rs  lsr.rs  mcr.rs  msr.rs
pac/qemu-pac/: Cargo.toml  lib.rs  qemu-16550.svd
pac/qemu-pac/src/: lib.rs  uart.rs
pac/qemu-pac/src/uart/: dlh.rs  dll.rs  fcr.rs  ier.rs  iir.rs  lcr.rs  lsr.rs  mcr.rs  msr.rs  rbr.rs  sch.rs  thr.rs
pac/src/: 16550.svd  lib.rs
trace/: analyze-trace-db.py  analyze-trace.py  event_def.py  insert-traces-to-db.py  print-trace.py
user/: Cargo.toml  Makefile
user/.cargo/: config.toml
user/src/: console.rs  future.rs  lib.rs  linker.ld  syscall.rs  trace.asm  trace.rs  trap.asm  trap.rs  user_uart.rs
