[package]
name = "os"
version = "0.1.0"
authors = ["Campbell He <hkp18@mails.tsinghua.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
buddy_system_allocator = "0.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4"
riscv = { git = "https://github.com/duskmoon314/riscv", branch = "extN", features = [
    "inline-asm",
] }
spin = "0.7.0"
xmas-elf = "0.7.0"
rv-plic = { git = "https://github.com/duskmoon314/rv-plic" }
uart8250 = { version = "*", features = ["fmt"] }

[features]
board_qemu = []
