[package]
name = "user_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
buddy_system_allocator = "0.6"
riscv = { git = "https://github.com/duskmoon314/riscv", branch = "extN", features = ["inline-asm"] }
